--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^6.5.1",
+    "mini-css-extract-plugin": "^2.4.5",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
